# OS-MAI

./: .gitignore  CMakeLists.txt  test
KP/: CMakeLists.txt  data2.json  graph_order.cpp  main.cpp  timer.cpp
KP/examples/: big_graph.json  components.json  cycle.json  data.json  semaphore.json
KP/graph_checker/: graph_checker.cpp  graph_checker.h
KP/json_parce/: json_parce.cpp  json_parce.h
lab1/: CMakeLists.txt  Makefile  child  main  parent  test
lab1/lib/: child.cpp  constants.h  parent.cpp
lab1/src/: main.cpp
lab2/: CMakeLists.txt
lab2/lib/: functions.cpp  functions.h  output_data  timer.cpp
lab2/src/: main.cpp  super_ultra_mega_grafik.py
lab3/: CMakeLists.txt  array_mem  backup.cpp  test
lab3/lib/: child.cpp  error_constants.h
lab3/src/: main.cpp
lab4/lib/: program_1.cpp  program_1.h  program_2.cpp  program_2.h
lab4/src/: dynamic_main.cpp  static_main.cpp
lab5-7/: CMakeLists.txt  compute.cpp  main.cpp  test  test.cpp  ttt
lab5-7/Handler/: handler.h
lab5-7/Timer/: TimerManager.cpp  TimerManager.h
lab5-7/Tree/: tree.cpp  tree.h
lab5-7/UI/: ui.cpp  ui.h
lab5-7/ZeroMQ_API/: ZeroMQ_API.cpp  ZeroMQ_API.h
lib/: child.h  constants.h  parent.cpp  parent.h
